<resources>
    <string name="app_name">taqforlocalgoverment</string>
    <string name="Title">データ検索</string>
    <string name="subTitle">西暦で検索</string>
    <string name="subTitle2"><![CDATA[西暦&月で検索]]></string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="alldataoutput">全データ表示</string>
    <string name="unk">月～</string>
    <string name="subTitle3">期間で検索</string>
    <string name="onmap">地図で表示</string>
    <string name="title_activity_maps">Map</string>
    <string name="heat_map">ヒートマップ</string>
    <string name="route">経路</string>
</resources>
